chore!: update insert room API
this improvement is needed by the clients to specify the users
owners on room creation

ref: WSC-1082